@@ -14,6 +14,7 @@ use FusionInventory::Agent::Task::Inventory::OS::Win32; # getWmiProperties
 
 our @EXPORT = qw(
     is64bit
+    getValueFromRegistry
 );
 
 sub is64bit {
@@ -28,6 +29,39 @@ sub is64bit {
 
     return $ret; 
 }
+
+sub getValueFromRegistry {
+    my ($path, $logger) = @_;
+
+    my $root;
+    my $subpath;
+    my $keyName;
+    if ($path =~ /^(HKEY\S+?)\/(.*)\/([^\/.]*)/ ) {
+        $root = $1;
+        $subpath = $2;
+        $keyName = $3;
+    }
+    my $machKey;
+    $Registry->Delimiter("/");
+    if (is64bit()) {
+        $machKey = $Registry->Open($root, { Access=> KEY_READ()|KEY_WOW64_64KEY() } );
+    } else {
+	$machKey = $Registry->Open($root, { Access=> KEY_READ() } );
+    }
+    if (!$machKey) {
+        if ($logger) {
+            $logger->error("Can't open `$root': $EXTENDED_OS_ERROR");
+        } else {
+            warn("Can't open `$root': $EXTENDED_OS_ERROR");
+        }
+        return;
+    }
+    my $key = $machKey->Open($subpath);
+    my $t = $key->{$keyName};
+    return if ref($t);
+    return $t;
+}
+
 
 1;
 __END__
@@ -46,4 +80,16 @@ This module provides some Windows-specific generic functions.
 
 Returns true if the OS is 64bit or false.
 
-=back
+=head2 getValueFromRegistry($path, $logger)
+
+Returns a value from the registry. The function returns undef in case of
+error.
+
+the $path parameter is a string in this format :
+$hive/location/keyname
+
+E.g: HKEY_LOCAL_MACHINE/SOFTWARE/Microsoft/Windows NT/CurrentVersion/ProductName
+
+The delimiter is '/
+
+If the $logger parameter is defined, it will be used.
