@@ -4,6 +4,8 @@ Revision history for FusionInventory::Agent
        * Show a larger part of the string returned by the server in case of
          error
        * Win32: Decrease the severity of a winkey read error
+       * add FusionInventory::Agent::Tools::Win32::getValueFromRegistry()
+         unused for now.
 
 2.1.8_rc1  Sat, 05 Mar 2011 14:56:58 +0100
        * Linux, correctly read the number of core from /proc/cpuinfo
